re create user;  add password

--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,27 +1,9 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
 
 one:
-  user_id: 1
-  uid: MyString
-  nick: MyString
+  name: MyString
   email: MyString
-  desc: MyString
-  sex: MyString
-  statue: 1
-  password: MyString
-  type: 
-  avatar: MyString
-  vip_info: MyString
 
 two:
-  user_id: 1
-  uid: MyString
-  nick: MyString
+  name: MyString
   email: MyString
-  desc: MyString
-  sex: MyString
-  statue: 1
-  password: MyString
-  type: 
-  avatar: MyString
-  vip_info: MyString
